--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<html>
+io<html>
 <head>
-	<title>WT Experiment - 1</title>
+	<title>Registration Form</title>
 </head>
 <body>
 	<img src = "https://image.freepik.com/free-vector/doodle-art-illustration_185029-159.jpg" alt = "Not IIIT" style = " position : relative ; float : left; margin : 0 ; padding : 0" width = "600px" height = "730px">
