--- a/index.html
+++ b/index.html
@@ -135,15 +135,15 @@ io<html>
 		<tr>
 			<td>
 				<label for = "picture">Profile Picture : </label><br><br>
-				<input type = "button" onclick = "" style="color : #0085b6 ; background-color : white ; border-radius : 20px ; border : 1px solid #808080 ; padding : 5px 20px 5px 20px" name = "picture" value = "Upload" >
+				<input type = "button" onclick = "" style="color : #6A08D3 ; background-color : white ; border-radius : 20px ; border : 1px solid #808080 ; padding : 5px 20px 5px 20px" name = "picture" value = "Upload" >
 				<!-- <button style = "color : #0085b6 ; float : right ;background-color : white ; border-radius : 20px ; border : 1px solid #808080 ; padding : 5px #CC3333 20px 5px 20px" >Newer</button> -->
 			</td>
 			<td>
 				<label for = "resetpage">Click Here to RESET</label><br><br>
-				<input type = "reset" onclick = "location.reload()" style="color : #0085b6 ; background-color : white ; border-radius : 20px ; border : 1px solid #808080 ; padding : 5px 20px 5px 20px" name = "resetpage" value = "Reset">
+				<input type = "reset" onclick = "location.reload()" style="color : #6A08D3 ; background-color : white ; border-radius : 20px ; border : 1px solid #808080 ; padding : 5px 20px 5px 20px" name = "resetpage" value = "Reset">
 			</td>
 		</tr>
 	</table>
 	<br><br>
 	
-	<center><input type = "submit" onclick = "alert('Did you like my Application form design?')" style="color : #0085b6 ; background-color : white ; border-radius : 20px ; border : 1px solid #808080 ; padding : 5px 20px 5px 20px ; font-size : 130%" value = "Submit"></center>
+	<center><input type = "submit" onclick = "alert('Did you like my Application form design?')" style="color : #6A08D3 ; background-color : white ; border-radius : 20px ; border : 1px solid #808080 ; padding : 5px 20px 5px 20px ; font-size : 130%" value = "Submit"></center>
